# tyche-examples

./: README.md
core_quickcheck-ocaml/: .gitignore
core_quickcheck-ocaml/bst_demo/: dune-project
core_quickcheck-ocaml/bst_demo/lib/: bst.ml  dune
core_quickcheck-ocaml/bst_demo/test/: bst_demo_test.ml  dune
hypothesis-python/: basic.py  bst.py  bst_tests.py  tyche.py
notebooks/: TycheReport.ipynb  nb.ipynb  testcases.jsonl
quickcheck-haskell/: CHANGELOG.md  LICENSE  cabal.project  hs-example.cabal
quickcheck-haskell/src/: MyLib.hs
quickcheck-haskell/test/: Main.hs
